--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,14 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.1"
     debugImplementation "androidx.compose.ui:ui-tooling:1.3.1"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.1"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
+    implementation project(path: ':domain')
+    implementation project(path: ':data')
+
+
+    // Glide for compose
+    // https://github.com/skydoves/landscapist
+    implementation "com.github.skydoves:landscapist-glide:1.5.3"
 }
